--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,29 @@
 {
-    "name": "Sisahy GO",
-    "short_name": "Sisahy GO",
-    "start_url": "/",
-    "display": "standalone",
-    "gcm_sender_id": "0000",
-    "background_color": "#FFFFF8",
-    "theme_color": "#8CB84E",
+    "name": "Sisahy Go",
+    "short_name": "Sisahy Go",
+    "description": "Progressive web apps for  Sisahy CRM",
+    "dir": "ltr",
+    "lang": "en",
     "icons": [{
-            "src": "ico/favicon-128.png",
-            "type": "image/png",
-            "sizes": "128x128"
+            "src": "/icon/sisahygo-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         },
         {
-            "src": "ico/icon-512x512.png",
-            "type": "image/png",
-            "sizes": "512x512"
-        },
-        {
-            "src": "ico/apple-touch-icon-152x152.png",
-            "type": "image/png",
-            "sizes": "152x152"
-        },
-        {
-            "src": "ico/mstile-144x144.png",
-            "type": "image/png",
-            "sizes": "144x144"
-        },
-        {
-            "src": "ico/chrome-touch-icon-192x192.png",
-            "type": "image/png",
-            "sizes": "192x192"
+            "src": "/icon/sisahygo-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
-    ]
+    ],
+    "theme_color": "#456BD9",
+    "background_color": "#456BD9",
+    "display": "standalone",
+    "orientation": "natural",
+    "start_url": "/",
+    "categories": [
+        "business",
+        "technology",
+        "web"
+    ],
+    "gcm_sender_id": "482941778795"
 }
