--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
         "jest": "^23.6.0",
         "jest-serializer-vue": "^2.0.2",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "tailwindcss": "^0.6.6",
         "vue": "^2.5.7",
         "vue-jest": "^3.0.0"
@@ -31,6 +32,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.8",
         "@fortawesome/free-solid-svg-icons": "^5.5.0",
         "@fortawesome/vue-fontawesome": "^0.1.2",
+        "laravel-mix": "^4.0.0",
         "laravel-mix-purgecss": "^3.0.0",
         "vuex": "^3.0.1"
     },
