--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
         "test": "jest"
     },
     "devDependencies": {
-        "@vue/test-utils": "^1.0.0-beta.25",
+        "@vue/test-utils": "^1.0.0-beta.27",
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.0",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
         "jest": "^23.6.0",
         "jest-serializer-vue": "^2.0.2",
         "jquery": "^3.2",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
+        "popper.js": "^1.14.6",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "tailwindcss": "^0.6.6",
-        "vue": "^2.5.7",
-        "vue-jest": "^3.0.0"
+        "vue": "^2.5.21",
+        "vue-jest": "^3.0.2",
+        "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.8",
-        "@fortawesome/free-solid-svg-icons": "^5.5.0",
-        "@fortawesome/vue-fontawesome": "^0.1.2",
-        "laravel-mix": "^4.0.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.10",
+        "@fortawesome/free-solid-svg-icons": "^5.6.1",
+        "@fortawesome/vue-fontawesome": "^0.1.3",
+        "laravel-mix": "^4.0.12",
         "laravel-mix-purgecss": "^3.0.0",
         "vuex": "^3.0.1"
     },
