--- a/package.json
+++ b/package.json
@@ -7,55 +7,26 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && workbox generateSW workbox-config.js",
-        "test": "jest"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@vue/test-utils": "^1.0.0-beta.27",
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
-        "jest": "^23.6.0",
-        "jest-serializer-vue": "^2.0.2",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.14",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
-        "popper.js": "^1.14.6",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "^0.6.6",
-        "vue": "^2.5.21",
-        "vue-jest": "^3.0.2",
-        "vue-template-compiler": "^2.5.21"
+        "tailwindcss": "^0.7.4",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.2"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.10",
-        "@fortawesome/free-solid-svg-icons": "^5.6.1",
-        "@fortawesome/vue-fontawesome": "^0.1.3",
-        "laravel-mix-purgecss": "^3.0.0",
-        "vuex": "^3.0.1"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "vue"
-        ],
-        "transform": {
-            ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-            "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
-        },
-        "moduleNameMapper": {
-            "^@/(.*)$": "<rootDir>/src/$1"
-        },
-        "snapshotSerializers": [
-            "<rootDir>/node_modules/jest-serializer-vue"
-        ],
-        "testPathIgnorePatterns": [
-            "/node_modules/",
-            "/nova/"
-        ]
+        "babel-loader": "^8.0.5",
+        "css-loader": "^2.1.0",
+        "vue-loader": "^15.6.2"
     }
 }
