--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,28 @@
             "src": "/images/icons/sisahygo-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+
+        {
+            "src": "/images/icons/sisahygo-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/sisahygo-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/sisahygo-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+
+        {
+            "src": "/images/icons/sisahygo-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png"
         }
     ],
     "theme_color": "#0C60A1",
