--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "algolia/algoliasearch-client-php": "^2.2",
         "fideloper/proxy": "^4.0",
         "gregoriohc/laravel-nova-theme-responsive": "^0.6.1",
         "laravel/framework": "5.7.*",
         "laravel/nova": "*",
+        "laravel/scout": "^7.0",
         "laravel/tinker": "^1.0",
         "ramsey/uuid": "^3.8"
     },
